--- a/src/views/Pokemon/PokemonList/style.css
+++ b/src/views/Pokemon/PokemonList/style.css
@@ -4,3 +4,11 @@
     justify-content:flex-start;
     cursor: pointer;
 }
+button{
+    margin: 10px;
+    height: 50px;
+    font-weight: bold;
+    font-size: 20px;
+    color:rgb(122, 12, 12);
+    background-color: rgb(156, 118, 46);
+}
